exports[`Run optimized tags should evaluate to a tag 1`] = `
Tag {
  "options": Object {
    "hasValue": true,
    "isStateDependency": true,
  },
  "strings": Array [
    "hello.world",
  ],
  "type": "state",
  "values": Array [],
}
`;

exports[`Run optimized tags should evaluate to a tag with nested tags 1`] = `
Tag {
  "options": Object {
    "hasValue": true,
    "isStateDependency": true,
  },
  "strings": Array [
    "a.",
    "",
  ],
  "type": "state",
  "values": Array [
    Tag {
      "options": Object {
        "hasValue": true,
      },
      "strings": Array [
        "b",
      ],
      "type": "input",
      "values": Array [],
    },
  ],
}
`;
